tests/checker/ok/method_chain_through_alias.can
Greeting = String

main = () => Unit {
    "hello"
        -> Greeting
        -> Joined(" world")
        -> Print
}
