tests/checker/fail/self_constructor_name.can
Loud = String

Self = (Loud) => Loud {
    Loud
}

Unit => Program {
    "hello" -> Loud -> Print
}
